package app;

import vista.Menu;

public class App {

        public static void main(String[] args) {

                Menu menu = new Menu();

                menu.iniciar();

        }

}
