@startuml

title Sistema de Administración de Taller - Versión 2

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle

package "app" {

class App {
    +main(String[] args) : void
}

}

package "vista" {

class Menu {

    -scanner : Scanner
    -gestor : GestorJson
    -sistema : SistemaTaller

    +iniciar() : void

    -mostrarMenuInicial() : void
    -mostrarMenuPrincipal() : void

    -crearSistema() : void
    -cargarSistema() : void
    -guardarSistema() : void

    -ejecutarDemostracion() : void

    -agregarMecanico() : void
    -agregarAuto() : void

    -leerEntero() : int
    -pausar() : void

}

}

package "interfaces" {

interface ISistemaTaller {

    +agregarMecanico(nombre:String, especialidad:String) : void

    +agregarAutoAMecanico(id:int, placa:String, marca:String, modelo:String) : void

    +cantidadMecanicos() : int

    +cantidadTotalAutos() : int

    +mostrarSistema() : void

    +mostrarMecanicos() : void

}

}

package "modelo" {

class SistemaTaller {

    -nombreSistema : String
    -fechaCreacion : String
    -mecanicos : HashMap<Integer,Mecanico>

    +SistemaTaller(nombreSistema, fechaCreacion)

    +agregarMecanico(nombre:String, especialidad:String) : void

    +agregarAutoAMecanico(id:int, placa:String, marca:String, modelo:String) : void

    +cantidadMecanicos() : int

    +cantidadTotalAutos() : int

    +mostrarSistema() : void

    +mostrarMecanicos() : void

    -generarNuevoId() : int

}

class Mecanico {

    -id : Integer
    -nombre : String
    -especialidad : String
    -autosReparados : HashMap<String,Auto>

    +agregarAuto(auto:Auto) : void

    +getId() : Integer

    +getNombre() : String

    +getEspecialidad() : String

    +getAutosReparados() : HashMap<String,Auto>

}

class Auto {

    -placa : String
    -marca : String
    -modelo : String

    +getPlaca() : String

    +getMarca() : String

    +getModelo() : String

}

}

package "persistencia" {

class GestorJson {

    +guardarSistema(sistema:SistemaTaller, archivo:String) : void

    +cargarSistema(archivo:String) : SistemaTaller

}

}

package "excepciones" {

class LimiteMecanicosException
class LimiteAutosException
class NombreVacioException
class MecanicoNoEncontradoException

}

'==========================
' Relaciones
'==========================

App --> Menu

Menu --> SistemaTaller
Menu --> GestorJson

SistemaTaller ..|> ISistemaTaller

SistemaTaller "1" *-- "*" Mecanico
Mecanico "1" *-- "*" Auto

GestorJson ..> SistemaTaller

LimiteMecanicosException --|> RuntimeException
LimiteAutosException --|> RuntimeException
NombreVacioException --|> RuntimeException
MecanicoNoEncontradoException --|> RuntimeException

@enduml